// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders PrimaryLine correctly 1`] = `
<span
  className="flex-parent flex-parent--column"
>
  <p
    className="flex-child truncate-3-lines my6 txt-break-url"
  >
    #hotosm-project-2999 #MissingMaps #EndMalaria #Mali
  </p>
  <span
    className="mb3"
  >
    <span
      className="mr6"
    >
      <span
        className="color-blue-dark inline-block bg-blue-faint px6 txt-s txt-bold "
      >
        mass deletion
      </span>
    </span>
    <span
      className="mr6"
    >
      <span
        className="color-blue-dark inline-block bg-blue-faint px6 txt-s txt-bold "
      >
        Randomized flag
      </span>
    </span>
  </span>
  <span
    className="mb3"
  >
    <span
      className="mr6"
    >
      <span
        className="color-red-dark inline-block bg-red-faint px6 txt-s txt-bold "
      >
        intentional
      </span>
    </span>
    <span
      className="mr6"
    >
      <span
        className="color-red-dark inline-block bg-red-faint px6 txt-s txt-bold "
      >
        unintentional
      </span>
    </span>
  </span>
</span>
`;

exports[`renders active row properly 1`] = `
<div>
  <div
    className="light-blue border-l border-l--4 border-color-bad"
  >
    <div
      className="p12 cursor-pointer flex-parent flex-parent--column border-b border-b--1 border--gray-light flex-parent flex-parent--column"
    >
      <a
        data-discover="true"
        href="/changesets/49328744"
        onClick={[Function]}
      >
        <div>
          <span
            className="flex-parent flex-parent--row justify--space-between align-items--center"
          >
            <strong
              className="txt-m mt3 mr6"
            >
              DaryR
            </strong>
            <span
              className="txt-s mr3"
            >
               
              <time
                dateTime="2017-06-07T08:25:38.000Z"
                title="Wed Jun 07 2017 08:25:38 GMT+0000 (Coordinated Universal Time)"
              >
                4 days ago
              </time>
            </span>
          </span>
        </div>
        <span
          className="flex-parent flex-parent--column"
        >
          <p
            className="flex-child truncate-3-lines my6 txt-break-url"
          >
            #hotosm-project-2999 #MissingMaps #EndMalaria #Mali
          </p>
          <span
            className="mb3"
          >
            <span
              className="mr6"
            >
              <span
                className="color-blue-dark inline-block bg-blue-faint px6 txt-s txt-bold "
              >
                mass deletion
              </span>
            </span>
            <span
              className="mr6"
            >
              <span
                className="color-blue-dark inline-block bg-blue-faint px6 txt-s txt-bold "
              >
                Randomized flag
              </span>
            </span>
          </span>
          <span
            className="mb3"
          >
            <span
              className="mr6"
            >
              <span
                className="color-red-dark inline-block bg-red-faint px6 txt-s txt-bold "
              >
                intentional
              </span>
            </span>
            <span
              className="mr6"
            >
              <span
                className="color-red-dark inline-block bg-red-faint px6 txt-s txt-bold "
              >
                unintentional
              </span>
            </span>
          </span>
        </span>
      </a>
      <span
        className="flex-parent flex-parent--row justify--space-between txt-light txt-s color-gray"
      >
        <span>
          <a
            className="txt-underline-on-hover"
            data-discover="true"
            href="/changesets/49328744"
            onClick={[Function]}
          >
            <span
              className="mr6"
            >
              49328744
            </span>
          </a>
          <a
            className="txt-underline-on-hover"
            data-discover="true"
            href="/?filters=%7B%22users%22%3A%5B%7B%22label%22%3A%22nammala%22%2C%22value%22%3A%22nammala%22%7D%5D%2C%22date__gte%22%3A%5B%7B%22label%22%3A%22%22%2C%22value%22%3A%22%22%7D%5D%7D"
            onClick={[Function]}
            title="See nammala's changesets"
          >
            <img
              alt="Marked as bad"
              className="icon inline-block"
              src="data:image/svg+xml,%3c?xml%20version='1.0'%20encoding='UTF-8'?%3e%3csvg%20width='100px'%20height='99px'%20viewBox='0%200%20100%2099'%20version='1.1'%20xmlns='http://www.w3.org/2000/svg'%20xmlns:xlink='http://www.w3.org/1999/xlink'%3e%3c!--%20Generator:%20Sketch%2044.1%20(41455)%20-%20http://www.bohemiancoding.com/sketch%20--%3e%3ctitle%3eicons/Thumbs-down-trans%3c/title%3e%3cdesc%3eCreated%20with%20Sketch.%3c/desc%3e%3cdefs%3e%3c/defs%3e%3cg%20id='Symbols'%20stroke='none'%20stroke-width='1'%20fill='none'%20fill-rule='evenodd'%3e%3cg%20id='icons/Thumbs-down-trans'%20fill='%23CC2C47'%3e%3cg%20id='Thumbs-up'%20transform='translate(50.000000,%2049.500000)%20rotate(-180.000000)%20translate(-50.000000,%20-49.500000)%20'%3e%3cpath%20d='M41.8167977,42%20L8.65058811,42%20L8.65058811,42%20C8.15292909,42%207.65635568,42.0464369%207.16732524,42.1387068%20C2.82565287,42.9578902%20-0.0298885833,47.1415905%200.789294882,51.4832629%20L7.77042696,88.4832629%20C8.483559,92.2628627%2011.7854321,95%2015.6317202,95%20L15.6317202,95%20L92,95%20C96.418278,95%20100,91.418278%20100,87%20L100,87%20L100,50%20C100,45.581722%2096.418278,42%2092,42%20L64.8136835,42%20C64.848108,41.339148%2064.8257549,40.6662103%2064.7423209,39.9866948%20L61.0862406,10.2103103%20C60.3122149,3.90637709%2054.5743956,-0.576498687%2048.2704624,0.197526982%20L48.2704624,0.197526982%20L48.2704624,0.197526982%20C41.9665292,0.97155265%2037.4836534,6.70937199%2038.2576791,13.0133052%20L38.2576791,13.0133052%20L41.8167977,42%20Z'%20id='Combined-Shape'%20fill-opacity='0.3'%3e%3c/path%3e%3crect%20id='Rectangle-7'%20fill-opacity='0.9'%20x='76'%20y='37'%20width='24'%20height='62'%20rx='8'%3e%3c/rect%3e%3c/g%3e%3c/g%3e%3c/g%3e%3c/svg%3e"
            />
            <span
              className="pl6"
            >
              by nammala
            </span>
          </a>
        </span>
        <span
          className="flex-parent flex-parent--row"
        >
          <div
            className="flex-parent flex-parent--row flex-parent--wrap mr3"
          >
            <div
              className="cmap-bg-create  color-white inline-block px6 txt-s txt-bold round unround-r"
            >
              1624
            </div>
            <div
              className="cmap-bg-modify-old  color-white inline-block px6  txt-s txt-bold unround"
            >
              26
            </div>
            <div
              className="cmap-bg-delete color-white inline-block px6 txt-s txt-bold round unround-l"
            >
              2666
            </div>
          </div>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders inactive row properly 1`] = `
<div>
  <div
    className=" border-l border-l--4 border-color-bad"
  >
    <div
      className="p12 cursor-pointer flex-parent flex-parent--column border-b border-b--1 border--gray-light flex-parent flex-parent--column"
    >
      <a
        data-discover="true"
        href="/changesets/49328744"
        onClick={[Function]}
      >
        <div>
          <span
            className="flex-parent flex-parent--row justify--space-between align-items--center"
          >
            <strong
              className="txt-m mt3 mr6"
            >
              DaryR
            </strong>
            <span
              className="txt-s mr3"
            >
               
              <time
                dateTime="2017-06-07T08:25:38.000Z"
                title="Wed Jun 07 2017 08:25:38 GMT+0000 (Coordinated Universal Time)"
              >
                4 days ago
              </time>
            </span>
          </span>
        </div>
        <span
          className="flex-parent flex-parent--column"
        >
          <p
            className="flex-child truncate-3-lines my6 txt-break-url"
          >
            #hotosm-project-2999 #MissingMaps #EndMalaria #Mali
          </p>
          <span
            className="mb3"
          >
            <span
              className="mr6"
            >
              <span
                className="color-blue-dark inline-block bg-blue-faint px6 txt-s txt-bold "
              >
                mass deletion
              </span>
            </span>
            <span
              className="mr6"
            >
              <span
                className="color-blue-dark inline-block bg-blue-faint px6 txt-s txt-bold "
              >
                Randomized flag
              </span>
            </span>
          </span>
          <span
            className="mb3"
          >
            <span
              className="mr6"
            >
              <span
                className="color-red-dark inline-block bg-red-faint px6 txt-s txt-bold "
              >
                intentional
              </span>
            </span>
            <span
              className="mr6"
            >
              <span
                className="color-red-dark inline-block bg-red-faint px6 txt-s txt-bold "
              >
                unintentional
              </span>
            </span>
          </span>
        </span>
      </a>
      <span
        className="flex-parent flex-parent--row justify--space-between txt-light txt-s color-gray"
      >
        <span>
          <a
            className="txt-underline-on-hover"
            data-discover="true"
            href="/changesets/49328744"
            onClick={[Function]}
          >
            <span
              className="mr6"
            >
              49328744
            </span>
          </a>
          <a
            className="txt-underline-on-hover"
            data-discover="true"
            href="/?filters=%7B%22users%22%3A%5B%7B%22label%22%3A%22nammala%22%2C%22value%22%3A%22nammala%22%7D%5D%2C%22date__gte%22%3A%5B%7B%22label%22%3A%22%22%2C%22value%22%3A%22%22%7D%5D%7D"
            onClick={[Function]}
            title="See nammala's changesets"
          >
            <img
              alt="Marked as bad"
              className="icon inline-block"
              src="data:image/svg+xml,%3c?xml%20version='1.0'%20encoding='UTF-8'?%3e%3csvg%20width='100px'%20height='99px'%20viewBox='0%200%20100%2099'%20version='1.1'%20xmlns='http://www.w3.org/2000/svg'%20xmlns:xlink='http://www.w3.org/1999/xlink'%3e%3c!--%20Generator:%20Sketch%2044.1%20(41455)%20-%20http://www.bohemiancoding.com/sketch%20--%3e%3ctitle%3eicons/Thumbs-down-trans%3c/title%3e%3cdesc%3eCreated%20with%20Sketch.%3c/desc%3e%3cdefs%3e%3c/defs%3e%3cg%20id='Symbols'%20stroke='none'%20stroke-width='1'%20fill='none'%20fill-rule='evenodd'%3e%3cg%20id='icons/Thumbs-down-trans'%20fill='%23CC2C47'%3e%3cg%20id='Thumbs-up'%20transform='translate(50.000000,%2049.500000)%20rotate(-180.000000)%20translate(-50.000000,%20-49.500000)%20'%3e%3cpath%20d='M41.8167977,42%20L8.65058811,42%20L8.65058811,42%20C8.15292909,42%207.65635568,42.0464369%207.16732524,42.1387068%20C2.82565287,42.9578902%20-0.0298885833,47.1415905%200.789294882,51.4832629%20L7.77042696,88.4832629%20C8.483559,92.2628627%2011.7854321,95%2015.6317202,95%20L15.6317202,95%20L92,95%20C96.418278,95%20100,91.418278%20100,87%20L100,87%20L100,50%20C100,45.581722%2096.418278,42%2092,42%20L64.8136835,42%20C64.848108,41.339148%2064.8257549,40.6662103%2064.7423209,39.9866948%20L61.0862406,10.2103103%20C60.3122149,3.90637709%2054.5743956,-0.576498687%2048.2704624,0.197526982%20L48.2704624,0.197526982%20L48.2704624,0.197526982%20C41.9665292,0.97155265%2037.4836534,6.70937199%2038.2576791,13.0133052%20L38.2576791,13.0133052%20L41.8167977,42%20Z'%20id='Combined-Shape'%20fill-opacity='0.3'%3e%3c/path%3e%3crect%20id='Rectangle-7'%20fill-opacity='0.9'%20x='76'%20y='37'%20width='24'%20height='62'%20rx='8'%3e%3c/rect%3e%3c/g%3e%3c/g%3e%3c/g%3e%3c/svg%3e"
            />
            <span
              className="pl6"
            >
              by nammala
            </span>
          </a>
        </span>
        <span
          className="flex-parent flex-parent--row"
        >
          <div
            className="flex-parent flex-parent--row flex-parent--wrap mr3"
          >
            <div
              className="cmap-bg-create  color-white inline-block px6 txt-s txt-bold round unround-r"
            >
              1624
            </div>
            <div
              className="cmap-bg-modify-old  color-white inline-block px6  txt-s txt-bold unround"
            >
              26
            </div>
            <div
              className="cmap-bg-delete color-white inline-block px6 txt-s txt-bold round unround-l"
            >
              2666
            </div>
          </div>
        </span>
      </span>
    </div>
  </div>
</div>
`;
